working with the domain class so the service can use it to manipulate data